2002-06-06  Jacob Berkman  <jacob@ximian.com>

	* modules/ssh-method.c: include <signal.h>

Wed Jun 05 12:31:10 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: implement directory monitors
	  as per the 2.0.0 bug #81670.  Still not completely finished since
	  according to test-monitor we are getting changes, but nautilus
	  refuses to update.  So I think there is some problem in nautilus,
	  perhaps it doesn't like the fact that it has dir monitors but
	  not file monitors?

2002-06-05  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-04  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info.c (reload_if_needed) : honour
	  gnome_vfs_is_frozen.
	(gnome_vfs_is_frozen) : rename from should_write_file_back.

2002-06-04  Kristian Rietveld  <kris@gtk.org>

	* libgnomevfs/gnome-vfs-standard-callbacks.h: add
	http:send-additional-headers and http:received-headers hooks.

	* modules/http-method.c (create_handle): invoke headers received
	callback after receiving full header,
	(make_request): invoke send additional headers callback and add
	extra headers if needed,
	(invoke_callback_headers_received): new function,
	(invoke_callback_send_additional_headers): new function

2002-06-03  Ian McKellar  <yakk@yakk.net>

	* modules/ssh-method.c: Big improvement to the ssh method from
	Robert Migues <mibus@bigpond.com>

2002-06-02  Alex Graveley  <alex@ximian.com>

	* modules/desktop-method.c (do_get_file_info): Set mime_type to
	"x-directory/vfolder-desktop", to allow launcher creation from
	nautilus.
	(do_get_file_info_from_handle): Ditto.

Fri May 31 10:23:01 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in,
	  modules/preferences.vfolder-info.in: Handle both kewords
	  'Sawfish' and 'X-GNOME-Sawfish' to make a clear transition,
	  in case someone has an older install of sawfish.

Thu May 30 17:11:04 2002  George Lebl <jirka@5z.com>
