@@ -1,3 +1,11 @@
+Thu Jun 06 14:16:27 2002  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c: implement file monitors
+	  as per the 2.0.0 bug #81670.  The bug is not closed even though
+	  it seems to be that we are emitting monitors correctly, but
+	  nautilus isn't catching them.  This also fixes some errors
+	  in the directory monitors as well.
+
 2002-06-06  Jacob Berkman  <jacob@ximian.com>
 
 	* modules/ssh-method.c: include <signal.h>
